test/distributions/bradc/ReplWithMultiDim.good
ReplWithMultiDim.chpl:5: error: ReplicatedDist only accepts a 1D targetLocales array
